--- a/views/index.html
+++ b/views/index.html
@@ -1,16 +1,11 @@
 <div class="col-sm-4 col-sm-offset-4">
   <h1>Groovr</h1>
   <img src="http://placehold.it/350x150">
-  <div class="text-center">
-    <button type="button" class="btn btn-default">Left</button>
-    <button type="button" class="btn btn-default">Middle</button>
-    <button type="button" class="btn btn-default">Right</button>
-  </div>
 
-  <form method="post" role="form">
-    <div class="form-group">
-      <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
+  {{#if message}}
+    <div class="alert alert-success">
+      <p>{{message}}</p>
     </div>
-    <button type="submit" value="Register" class="btn btn-primary btn-lg">Register</button>
-  </form>
+  {{/if}}
+  <a href="/signup" type="button" class="btn btn-primary btn-lg">Signup</a>
 </div>
