--- a/views/index.html
+++ b/views/index.html
@@ -2,10 +2,5 @@
   <h1>Groovr</h1>
   <img src="http://placehold.it/350x150">
 
-  {{#if message}}
-    <div class="alert alert-success">
-      <p>{{message}}</p>
-    </div>
-  {{/if}}
-  <a href="/signup" type="button" class="btn btn-primary btn-lg">Signup</a>
+  <a href="/signup" type="button" class="btn btn-primary btn-lg" id="sam-main-but">Signup</a>
 </div>
