--- a/views/layout.html
+++ b/views/layout.html
@@ -1,13 +1,24 @@
 <head>
   <meta charset="utf-8">
   <title>{{title}}</title>
+
   <link type="text/css" href="/css/bootstrap.min.css" rel="stylesheet"/>
   <link type="text/css" href="/css/style.css" rel="stylesheet"/>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 </head>
 <body>
   <div class="container-fluid">
-    <div class="body">
+    {{#if error}}
+      <div class="alert alert-danger">
+        <p>{{error}}</p>
+      </div>
+    {{/if}}
+    {{#if message}}
+      <div class="alert alert-success">
+        <p>{{message}}</p>
+      </div>
+    {{/if}}
+    <div class="main">
       {{{body}}}
     </div>
   </div>
