Added registration to home page

--- a/views/index.html
+++ b/views/index.html
@@ -2,5 +2,17 @@
   <h1>Groovr</h1>
   <img src="http://placehold.it/350x150">
 
+  <form class="form" action="/" method="POST">
+    <div class="form-group">
+      <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" id="givenname" name="givenname" placeholder="Given Name">
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" id="familyname" name="familyname" placeholder="Family Name">
+    </div>
+    <button type="submit" class="btn btn-primary btn-lg">Register</button>
+  </form>
   <a href="/signup" type="button" class="btn btn-primary btn-lg" id="sam-main-but">Signup</a>
 </div>
